--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.show-sql=true
 
 
 spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
 
