Comecando a implementar a segurança da api

--- a/pom.xml
+++ b/pom.xml
@@ -79,13 +79,12 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-jpamodelgen</artifactId>
 			</dependency>
-		
-	
-	</dependencies>
-	
-	
-	
-	
+<!-- 			Spring security		 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+	</dependencies>	
 
 	<build>
 		<plugins>
