--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
 		</dependency>
+		
+<!-- 		Spring Json web token   jwt  -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-jwt</artifactId>
+		</dependency>
 	</dependencies>	
 
 	<build>
